--- a/selector.less
+++ b/selector.less
@@ -14,4 +14,5 @@
   outline: 0;
   .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 10px @{color-rgba}");
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
+  cursor: pointer;
 }
