--- a/selector.less
+++ b/selector.less
@@ -1,7 +1,7 @@
 /*
  * Bedrock selector style
  *
- * Copyright (c) 2012-2015 Digital Bazaar, Inc. All rights reserved.
+ * Copyright (c) 2012-2017 Digital Bazaar, Inc. All rights reserved.
  */
 @import "../bedrock-angular/less/app.less";
 @import "../bedrock-angular-modal/modal.less";
@@ -15,4 +15,14 @@
   .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 10px @{color-rgba}");
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
   cursor: pointer;
+}
+
+/* Selection */
+.br-selected,
+.br-selectable:hover {
+  @color-rgba: rgba(red(@input-border-focus), green(@input-border-focus), blue(@input-border-focus), .8);
+  border: 1px solid @input-border-focus !important;
+  outline: 0;
+  .box-shadow(~"inset 0 1px 1px rgba(0,0,0,.075), 0 0 10px @{color-rgba}");
+  .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 }
